#56: implemented requested changes used toList instead